# myip

./: .gitignore  LICENSE  README.md  pyproject.toml
myip/: myip.py  network_interface.py  requests_headers.py  test_connection.py
